--- a/src/main/webapp/pages/NewCases/NewCases.html
+++ b/src/main/webapp/pages/NewCases/NewCases.html
@@ -11,8 +11,8 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="2em unset"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="unset unset 1em unset"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="unset unset 1em unset">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
